--- a/archives/toutiao-search/2024-05-03.md
+++ b/archives/toutiao-search/2024-05-03.md
@@ -1,71 +1,79 @@
 # 2024-05-03
 
-共 178 条
+共 186 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri May 03 2024 14:07:45 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri May 03 2024 15:00:37 GMT+0800 (China Standard Time) -->
+1. [四问河南大学大礼堂失火](https://so.toutiao.com/search?keyword=四问河南大学大礼堂失火)
 1. [直击嫦娥六号发射现场](https://so.toutiao.com/search?keyword=直击嫦娥六号发射现场)
-1. [河大礼堂原定4月7日前修缮完工](https://so.toutiao.com/search?keyword=河大礼堂原定4月7日前修缮完工)
 1. [“假日经济”热力十足](https://so.toutiao.com/search?keyword=“假日经济”热力十足)
-1. [五一带父母出去旅游有多无助](https://so.toutiao.com/search?keyword=五一带父母出去旅游有多无助)
 1. [高速塌方 老人下跪“逼停”后方车辆](https://so.toutiao.com/search?keyword=高速塌方+老人下跪“逼停”后方车辆)
+1. [五一带父母出去旅游有多无助](https://so.toutiao.com/search?keyword=五一带父母出去旅游有多无助)
 1. [厦门一杂技演员空中表演时坠亡](https://so.toutiao.com/search?keyword=厦门一杂技演员空中表演时坠亡)
-1. [俄缴获北约武器展打出“诛心”标语](https://so.toutiao.com/search?keyword=俄缴获北约武器展打出“诛心”标语)
 1. [中国三航母全家福来了](https://so.toutiao.com/search?keyword=中国三航母全家福来了)
 1. [普京就职典礼邀请函曝光](https://so.toutiao.com/search?keyword=普京就职典礼邀请函曝光)
-1. [游客滞留半夜徒步下山 宝泉致歉](https://so.toutiao.com/search?keyword=游客滞留半夜徒步下山+宝泉致歉)
-1. [朱珠建议不要高价网购二次销售商品](https://so.toutiao.com/search?keyword=朱珠建议不要高价网购二次销售商品)
 1. [离岸人民币兑美元升破7.19](https://so.toutiao.com/search?keyword=离岸人民币兑美元升破7.19)
-1. [礼堂火灾涉事公司中标多地文保工程](https://so.toutiao.com/search?keyword=礼堂火灾涉事公司中标多地文保工程)
-1. [广州地铁辟谣沥滘站漏雨](https://so.toutiao.com/search?keyword=广州地铁辟谣沥滘站漏雨)
+1. [俄缴获北约武器展打出“诛心”标语](https://so.toutiao.com/search?keyword=俄缴获北约武器展打出“诛心”标语)
+1. [曝奔驰车主撞人后还拿头盔打人](https://so.toutiao.com/search?keyword=曝奔驰车主撞人后还拿头盔打人)
+1. [男生第一次坐商务座还搭上一双鞋](https://so.toutiao.com/search?keyword=男生第一次坐商务座还搭上一双鞋)
 1. [张国清赴梅州指导高速塌方灾害处置](https://so.toutiao.com/search?keyword=张国清赴梅州指导高速塌方灾害处置)
-1. [台退将称赞福建舰建造水平堪称顶级](https://so.toutiao.com/search?keyword=台退将称赞福建舰建造水平堪称顶级)
-1. [淄博八大局炒锅饼小哥成新晋顶流](https://so.toutiao.com/search?keyword=淄博八大局炒锅饼小哥成新晋顶流)
-1. [每个城市都“来了一亿人”](https://so.toutiao.com/search?keyword=每个城市都“来了一亿人”)
-1. [岛内舆论热议福建舰海试：真不得了](https://so.toutiao.com/search?keyword=岛内舆论热议福建舰海试：真不得了)
-1. [五角大楼官员称俄军已进驻尼日尔](https://so.toutiao.com/search?keyword=五角大楼官员称俄军已进驻尼日尔)
-1. [大礼堂失火灼痛万千河大人](https://so.toutiao.com/search?keyword=大礼堂失火灼痛万千河大人)
-1. [周鸿祎：已拿到迈巴赫尾款将捐献](https://so.toutiao.com/search?keyword=周鸿祎：已拿到迈巴赫尾款将捐献)
+1. [广州地铁辟谣沥滘站漏雨](https://so.toutiao.com/search?keyword=广州地铁辟谣沥滘站漏雨)
+1. [游客滞留半夜徒步下山 宝泉致歉](https://so.toutiao.com/search?keyword=游客滞留半夜徒步下山+宝泉致歉)
 1. [《微暗之火》被指尺度大](https://so.toutiao.com/search?keyword=《微暗之火》被指尺度大)
+1. [台退将称赞福建舰建造水平堪称顶级](https://so.toutiao.com/search?keyword=台退将称赞福建舰建造水平堪称顶级)
+1. [NBA季后赛：尼克斯4-2淘汰76人](https://so.toutiao.com/search?keyword=NBA季后赛：尼克斯4-2淘汰76人)
+1. [每个城市都“来了一亿人”](https://so.toutiao.com/search?keyword=每个城市都“来了一亿人”)
+1. [男子寻找救命恩人却发现他不幸牺牲](https://so.toutiao.com/search?keyword=男子寻找救命恩人却发现他不幸牺牲)
 1. [大礼堂在河南大学是一种怎样的存在](https://so.toutiao.com/search?keyword=大礼堂在河南大学是一种怎样的存在)
-1. [拍下周鸿祎迈巴赫当事人：已完成支付](https://so.toutiao.com/search?keyword=拍下周鸿祎迈巴赫当事人：已完成支付)
-1. [新一轮暴雨大暴雨会下在哪儿](https://so.toutiao.com/search?keyword=新一轮暴雨大暴雨会下在哪儿)
-1. [直击河大礼堂着火后：房顶基本坍塌](https://so.toutiao.com/search?keyword=直击河大礼堂着火后：房顶基本坍塌)
-1. [上海推出商品住房“以旧换新”活动](https://so.toutiao.com/search?keyword=上海推出商品住房“以旧换新”活动)
-1. [广东书记、省长面向塌方发生地三鞠躬](https://so.toutiao.com/search?keyword=广东书记、省长面向塌方发生地三鞠躬)
-1. [河大老领导深夜痛哭：用泪水扑灭火焰](https://so.toutiao.com/search?keyword=河大老领导深夜痛哭：用泪水扑灭火焰)
-1. [太阳爆发强耀斑 对中国上空有影响](https://so.toutiao.com/search?keyword=太阳爆发强耀斑+对中国上空有影响)
+1. [周鸿祎：已拿到迈巴赫尾款将捐献](https://so.toutiao.com/search?keyword=周鸿祎：已拿到迈巴赫尾款将捐献)
 1. [武切维奇出任塞尔维亚新总理](https://so.toutiao.com/search?keyword=武切维奇出任塞尔维亚新总理)
-1. [河南省文物局调查河大礼堂着火](https://so.toutiao.com/search?keyword=河南省文物局调查河大礼堂着火)
-1. [美国黑人男子遭警察跪压后身亡](https://so.toutiao.com/search?keyword=美国黑人男子遭警察跪压后身亡)
-1. [土耳其宣布停止与以色列所有贸易](https://so.toutiao.com/search?keyword=土耳其宣布停止与以色列所有贸易)
-1. [官方通报河南大学大礼堂起火](https://so.toutiao.com/search?keyword=官方通报河南大学大礼堂起火)
-1. [美国数十所大学超2000人被捕](https://so.toutiao.com/search?keyword=美国数十所大学超2000人被捕)
-1. [在西湖边又看到白衬衫警察了](https://so.toutiao.com/search?keyword=在西湖边又看到白衬衫警察了)
+1. [大礼堂失火灼痛万千河大人](https://so.toutiao.com/search?keyword=大礼堂失火灼痛万千河大人)
+1. [拍下周鸿祎迈巴赫当事人：已完成支付](https://so.toutiao.com/search?keyword=拍下周鸿祎迈巴赫当事人：已完成支付)
+1. [五角大楼官员称俄军已进驻尼日尔](https://so.toutiao.com/search?keyword=五角大楼官员称俄军已进驻尼日尔)
+1. [河大老领导深夜痛哭：用泪水扑灭火焰](https://so.toutiao.com/search?keyword=河大老领导深夜痛哭：用泪水扑灭火焰)
+1. [新一轮暴雨大暴雨会下在哪儿](https://so.toutiao.com/search?keyword=新一轮暴雨大暴雨会下在哪儿)
+1. [太阳爆发强耀斑 对中国上空有影响](https://so.toutiao.com/search?keyword=太阳爆发强耀斑+对中国上空有影响)
+1. [直击河大礼堂着火后：房顶基本坍塌](https://so.toutiao.com/search?keyword=直击河大礼堂着火后：房顶基本坍塌)
+1. [淄博八大局炒锅饼小哥成新晋顶流](https://so.toutiao.com/search?keyword=淄博八大局炒锅饼小哥成新晋顶流)
+1. [匈牙利批北约为乌筹1000亿欧元提案](https://so.toutiao.com/search?keyword=匈牙利批北约为乌筹1000亿欧元提案)
 1. [河大礼堂修缮项目中标公司曝光](https://so.toutiao.com/search?keyword=河大礼堂修缮项目中标公司曝光)
-1. [纪念五三惨案96周年](https://so.toutiao.com/search?keyword=纪念五三惨案96周年)
-1. [2分钟了解高速公路结构和设计原理](https://so.toutiao.com/search?keyword=2分钟了解高速公路结构和设计原理)
+1. [岛内舆论热议福建舰海试：真不得了](https://so.toutiao.com/search?keyword=岛内舆论热议福建舰海试：真不得了)
+1. [以色列民众阻拦救援物资进入加沙](https://so.toutiao.com/search?keyword=以色列民众阻拦救援物资进入加沙)
+1. [官方通报河南大学大礼堂起火](https://so.toutiao.com/search?keyword=官方通报河南大学大礼堂起火)
+1. [胖猫轻生 其女友能否被追刑责](https://so.toutiao.com/search?keyword=胖猫轻生+其女友能否被追刑责)
+1. [杭州西湖龙翔桥开启“人从众”模式](https://so.toutiao.com/search?keyword=杭州西湖龙翔桥开启“人从众”模式)
+1. [河南省文物局调查河大礼堂着火](https://so.toutiao.com/search?keyword=河南省文物局调查河大礼堂着火)
+1. [美国数十所大学超2000人被捕](https://so.toutiao.com/search?keyword=美国数十所大学超2000人被捕)
+1. [医疗专家披露高速塌方伤者救治详情](https://so.toutiao.com/search?keyword=医疗专家披露高速塌方伤者救治详情)
+1. [河大礼堂原定4月7日前修缮完工](https://so.toutiao.com/search?keyword=河大礼堂原定4月7日前修缮完工)
+1. [重庆旅游热度居全国第三](https://so.toutiao.com/search?keyword=重庆旅游热度居全国第三)
+1. [上海推出商品住房“以旧换新”活动](https://so.toutiao.com/search?keyword=上海推出商品住房“以旧换新”活动)
 1. [河大礼堂起火时疑有施工队休息](https://so.toutiao.com/search?keyword=河大礼堂起火时疑有施工队休息)
+1. [火箭是如何“加油”的](https://so.toutiao.com/search?keyword=火箭是如何“加油”的)
+1. [2分钟了解高速公路结构和设计原理](https://so.toutiao.com/search?keyword=2分钟了解高速公路结构和设计原理)
+1. [90岁河大礼堂承载着抗日记忆](https://so.toutiao.com/search?keyword=90岁河大礼堂承载着抗日记忆)
+1. [土耳其宣布停止与以色列所有贸易](https://so.toutiao.com/search?keyword=土耳其宣布停止与以色列所有贸易)
+1. [高速塌方灾害发布会全体默哀](https://so.toutiao.com/search?keyword=高速塌方灾害发布会全体默哀)
+1. [朱珠建议不要高价网购二次销售商品](https://so.toutiao.com/search?keyword=朱珠建议不要高价网购二次销售商品)
+1. [礼堂火灾涉事公司中标多地文保工程](https://so.toutiao.com/search?keyword=礼堂火灾涉事公司中标多地文保工程)
+1. [广东书记、省长面向塌方发生地三鞠躬](https://so.toutiao.com/search?keyword=广东书记、省长面向塌方发生地三鞠躬)
+1. [美国黑人男子遭警察跪压后身亡](https://so.toutiao.com/search?keyword=美国黑人男子遭警察跪压后身亡)
+1. [在西湖边又看到白衬衫警察了](https://so.toutiao.com/search?keyword=在西湖边又看到白衬衫警察了)
+1. [纪念五三惨案96周年](https://so.toutiao.com/search?keyword=纪念五三惨案96周年)
 1. [吴京祝福嫦娥六号发射](https://so.toutiao.com/search?keyword=吴京祝福嫦娥六号发射)
 1. [五一假期多地再现“最美人墙”](https://so.toutiao.com/search?keyword=五一假期多地再现“最美人墙”)
 1. [河大礼堂的历史：冼星海在此教歌](https://so.toutiao.com/search?keyword=河大礼堂的历史：冼星海在此教歌)
 1. [21岁小伙疑被女友PUA跳江自杀](https://so.toutiao.com/search?keyword=21岁小伙疑被女友PUA跳江自杀)
 1. [坐着火车游新疆](https://so.toutiao.com/search?keyword=坐着火车游新疆)
 1. [河大校长五一前曾提聚焦消防隐患](https://so.toutiao.com/search?keyword=河大校长五一前曾提聚焦消防隐患)
-1. [男生第一次坐商务座还搭上一双鞋](https://so.toutiao.com/search?keyword=男生第一次坐商务座还搭上一双鞋)
 1. [郭晋安欧倩怡离婚](https://so.toutiao.com/search?keyword=郭晋安欧倩怡离婚)
 1. [景区因开封王婆回归临时限流](https://so.toutiao.com/search?keyword=景区因开封王婆回归临时限流)
 1. [小猪被困岸边5天 女子发视频求助](https://so.toutiao.com/search?keyword=小猪被困岸边5天+女子发视频求助)
 1. [重庆网红人行天桥五一期间限流](https://so.toutiao.com/search?keyword=重庆网红人行天桥五一期间限流)
-1. [高速塌方灾害发布会全体默哀](https://so.toutiao.com/search?keyword=高速塌方灾害发布会全体默哀)
-1. [男子寻找救命恩人却发现他不幸牺牲](https://so.toutiao.com/search?keyword=男子寻找救命恩人却发现他不幸牺牲)
-1. [NBA季后赛：尼克斯4-2淘汰76人](https://so.toutiao.com/search?keyword=NBA季后赛：尼克斯4-2淘汰76人)
 1. [河大礼堂相关旧址曾获评建筑遗产](https://so.toutiao.com/search?keyword=河大礼堂相关旧址曾获评建筑遗产)
 1. [以方代表在联大称联合国日子不多了](https://so.toutiao.com/search?keyword=以方代表在联大称联合国日子不多了)
-1. [杭州西湖龙翔桥开启“人从众”模式](https://so.toutiao.com/search?keyword=杭州西湖龙翔桥开启“人从众”模式)
 1. [中华保险向梅大高速预付1000万元](https://so.toutiao.com/search?keyword=中华保险向梅大高速预付1000万元)
 1. [专家：055型大驱实现导弹共架发射](https://so.toutiao.com/search?keyword=专家：055型大驱实现导弹共架发射)
-1. [医疗专家披露高速塌方伤者救治详情](https://so.toutiao.com/search?keyword=医疗专家披露高速塌方伤者救治详情)
 1. [杭州西湖边连续第9年现最美人墙](https://so.toutiao.com/search?keyword=杭州西湖边连续第9年现最美人墙)
 1. [媒体：大礼堂失火灼痛万千河大人](https://so.toutiao.com/search?keyword=媒体：大礼堂失火灼痛万千河大人)
 1. [广东高速塌陷事故已致48死](https://so.toutiao.com/search?keyword=广东高速塌陷事故已致48死)
